# flux2_gen

./: .gitignore  pyproject.toml  test.py
src/flux2_gen/: __init__.py  __main__.py  pipeline.py
